=======================
Stalker Pyramid Changes
=======================

0.1.7
=====

* **New:** The images on ticket comments are now copied to Stalker Storage and
  the links in the comments are replaced with proper Link instance paths. And
  the upload limit is increased to 2 MBytes per file.

0.1.6
=====

* **Update:** ``views.task.request_revision()`` will not create any new task
  anymore, it will only extend the task with the given revision timing.
* **Update:** ``views.time_log.create_time_log()`` will allow to create time
  logs for tasks with "hrev" status, and as usual it will convert the status
  to "wip" for that particular task.
* **Update:** ``views.time_log.delete_time_log()`` now doesn't allow to delete
  time logs of a completed task.
* **Update:** ``views.task.request_revision()`` now adds the revision
  description as a comment to the tickets which have the revised task in their
  links list.
* **Update:** ``views.task.request_review()`` now updates the related ticket if
  this is not the first review requested for the task.

0.1.5
=====

* **New:** Added a new status called "Ready To Start | RTS" which sits in
  between NEW and WIP. Any newly created task will have its status set to RTS
  if no dependencies has given. If there are dependencies and not all of them
  are in "Complete | CMPL" status, then the newly created tasks status will be
  NEW, otherwise its status will be RTS. And the status of all the dependent
  tasks will be updated on any review has been made to a task.
* **Fix:** Fixed ``GanttGrid.js`` where the event argument was not set for
  right arrow and down arrow key functions.
* **Fix:** A bug is fixed in ``views.entity.submit_search()`` and
  ``views.entity.list_search_result()`` views.
* **Update:** The tjp ids in the error messages of TaskJuggler are now replaced
  with correct links to the related task.

0.1.4
=====

* **New:** Added "Create" button to ``view_ticket.jinja2`` template. So it is