@@ -284,61 +284,6 @@
         {% endif %}
     </script>
 
-    {#    <script type="text/javascript">#}
-    {#        $(document).ready(function () {#}
-    {#            var percent_complete = parseFloat('{{ entity.percent_complete }}');#}
-    {#    #}
-    {#            var content = [#}
-    {#                ['COMPLETED', percent_complete],#}
-    {#                ['UNCOMPLETED', 100 - percent_complete]#}
-    {#            ];#}
-    {#            var colors = ['#82af6f', '#bbb'];#}
-    {#    #}
-    {#            drawPieChart('pie_chart', content, colors, 'nw')#}
-    {#        });#}
-    {#    </script>#}
-
-
-    <script type="text/javascript">
-
-
-        {#        $(function () {#}
-        {##}
-        {#            var submit_action = function (e) {#}
-        {#                e.preventDefault();#}
-        {#                e.stopPropagation();#}
-        {##}
-        {#                var entity_id = {{ entity.id }};#}
-        {##}
-        {#                bootbox.confirm(#}
-        {#                        '<div class="alert alert-info bigger-110">This will send the responsible of this task a ' +#}
-        {#                                '<strong>review request</strong> and you will ' +#}
-        {#                                '<strong>not</strong> be able to ' +#}
-        {#                                '<strong>create any TimeLogs</strong> for this task ' +#}
-        {#                                'after this point<br><br><strong>Are you sure?</strong></div>',#}
-        {#                        function (result) {#}
-        {#                            if (result) {#}
-        {#                                // get the ids and send it to the server#}
-        {#                                var url;#}
-        {#                                url = '/tasks/' + entity_id + '/request_review';#}
-        {#                                $.post(url).done(function (response) {#}
-        {#                                    console.log(response)#}
-        {#                                    bootbox.alert(response);#}
-        {#                                }).fail(function (jqXHR) {#}
-        {#                                            bootbox.alert(jqXHR.responseText);#}
-        {#                                        });#}
-        {#                            }#}
-        {#                        }#}
-        {#                )#}
-        {#            }#}
-
-        //$('#task_page_request_review_button').on('click', submit_action);
-        //$('#task_request_review_button').on('click', submit_action);
-
-
-
-    </script>
-
     <script type="text/javascript">
         $(document).ready(function () {
 
