@@ -1854,14 +1854,16 @@ def request_review(request):
     # get the project that the ticket belongs to
     project = task.project
 
-    user_link = '<a href="%(url)s">%(name)s</a>' % {
-        'url': request.route_url('view_user', id=logged_in_user.id),
-        'name': logged_in_user.name
-    }
+    # user_link = '<a href="%(url)s">%(name)s</a>' % {
+    #     'url': request.route_url('view_user', id=logged_in_user.id),
+    #     'name': logged_in_user.name
+    # }
+
     user_link_internal = '<a href="%(url)s">%(name)s</a>' % {
         'url': request.route_path('view_user', id=logged_in_user.id),
         'name': logged_in_user.name
     }
+
     task_parent_names = "|".join(map(lambda x: x.name, task.parents))
 
     task_name_as_text = "%(name)s (%(entity_type)s) - (%(parents)s)" % {
@@ -1869,14 +1871,16 @@ def request_review(request):
         "entity_type": task.entity_type,
         "parents": task_parent_names
     }
-    task_link = \
-        '<a href="%(url)s">%(name)s ' \
-        '(%(task_entity_type)s) - (%(task_parent_names)s)</a>' % {
-            "url": request.route_url('view_task', id=task.id),
-            "name": task.name,
-            "task_entity_type": task.entity_type,
-            "task_parent_names": task_parent_names
-        }
+
+    # task_link = \
+    #     '<a href="%(url)s">%(name)s ' \
+    #     '(%(task_entity_type)s) - (%(task_parent_names)s)</a>' % {
+    #         "url": request.route_url('view_task', id=task.id),
+    #         "name": task.name,
+    #         "task_entity_type": task.entity_type,
+    #         "task_parent_names": task_parent_names
+    #     }
+
     task_link_internal = \
         '<a href="%(url)s">%(name)s ' \
         '(%(task_entity_type)s) - (%(task_parent_names)s)</a>' % {
@@ -1890,17 +1894,20 @@ def request_review(request):
         'name': task.name,
         'parent_names': task_parent_names
     }
+
     description_template = \
-        '%(user)s has requested you to do a review for ' \
-        '%(task)s'
+        '%(user)s has requested you to do a review for %(task)s'
+
     description_text = description_template % {
         "user": logged_in_user.name,
         "task": task_name_as_text
     }
+
     description_html = description_template % {
-        "user": user_link,
-        "task": task_link
+        "user": '<strong>%s</strong>' % logged_in_user.name,
+        "task": '<strong>%s</strong>' % task_name_as_text
     }
+
     ticket_description = description_template % {
         "user": user_link_internal,
         "task": task_link_internal
@@ -2177,28 +2184,51 @@ def request_revision(request):
 
     if send_email:
         # and send emails to the resources
-        summary_text = 'Revision Request: "%s"' % task.name
 
-        description_text = \
-            '%(requester_name)s has requested a revision to the task ' \
-            '%(task_name)s on %(task_link)s and expanded the timing of the ' \
-            'task by %(timing)s %(unit)s. The following description is ' \
-            'supplied for the revision request:\n\n' \
-            '%(description)s' % {
-                "requester_name": logged_in_user.name,
-                "task_name": task.name,
-                "task_link": request.route_url('view_task', id=task.id),
-                "timing": schedule_timing,
-                "unit": {
-                    'h': 'hours',
-                    'd': 'days',
-                    'w': 'weeks',
-                    'm': 'months',
-                    'y': 'years'
-                }[schedule_unit],
-                "description": description
-                if description else "(No Description)"
+        task_full_name = "%(task_name)s (%(parent_names)s)" % {
+            'task_name': task.name,
+            'parent_names': ' | '.join(map(lambda x: x.name, task.parents))
+        }
+
+        summary_text = \
+            'Revision Request: "%(task_full_name)s"' % {
+                'task_full_name': task_full_name
             }
+
+        description_body = \
+            '%(requester_name)s has requested a revision to ' \
+            '%(task)s and expanded the timing of the task by %(timing)s ' \
+            '%(unit)s. The following description is supplied for the ' \
+            'revision request:%(spacing)s' \
+            '%(description)s'
+
+        unit_word = {
+            'h': 'hours',
+            'd': 'days',
+            'w': 'weeks',
+            'm': 'months',
+            'y': 'years'
+        }[schedule_unit]
+
+        description_text = description_body % {
+            "requester_name": logged_in_user.name,
+            "task": task_full_name,
+            "timing": schedule_timing,
+            "unit": unit_word,
+            "spacing": '\n\n',
+            "description": description
+            if description else "(No Description)"
+        }
+
+        description_html = description_body % {
+            "requester_name": '<strong>%s</strong>' % logged_in_user.name,
+            "task": '<strong>%s</strong>' % task_full_name,
+            "timing": '<strong>%s' % schedule_timing,
+            "unit": '%s</strong>' % unit_word,
+            "spacing": '<br><br>',
+            "description": description.replace('\n', '<br>')
+            if description else "(No Description)"
+        }
 
         responsible = task.responsible
         # send email to responsible and resources of the task
@@ -2214,7 +2244,8 @@ def request_revision(request):
             subject=summary_text,
             sender=dummy_email_address,
             recipients=recipients,
-            body=description_text
+            body=description_text,
+            html=description_html
         )
         mailer.send(message)
 
