@@ -8,6 +8,11 @@ Stalker Pyramid Changes
 * **New:** The images on ticket comments are now copied to Stalker Storage and
   the links in the comments are replaced with proper Link instance paths. And
   the upload limit is increased to 2 MBytes per file.
+* **Update:** Unified the "Review Request Dialog" over the whole site.
+* **Update:** Updated the templates for "Review Request", "Ticket Update" and
+  "Revision Request" mails.
+* **Fix:** Fixed Ticket comment display on multiple lines when the comment is
+  plain text.
 
 0.1.6
 =====
